--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,15 @@ body {
   letter-spacing: 0.02em;
   color: #2e2f42;
 }
+.li-nav {
+  color: #2e2f42;
+}
+.li-nav:hover {
+  color: #404bbf;
+}
+.li-nav:focus {
+  color: #404bbf;
+}
 .address {
   font-weight: 400;
   font-size: 16px;
@@ -29,6 +38,24 @@ body {
   letter-spacing: 0.02em;
   color: #434455;
   font-style: normal;
+}
+.email {
+  color: #434455;
+}
+.email:hover {
+  color: #404bbf;
+}
+.email:focus {
+  color: #404bbf;
+}
+.telephone {
+  color: #434455;
+}
+.telephone:hover {
+  color: #404bbf;
+}
+.telephone:focus {
+  color: #404bbf;
 }
 .text-button {
   background-color: #2e2f42;
@@ -115,13 +142,6 @@ h1 {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
-}
-.portfolio-text {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #434455;
 }
 .footer {
   background-color: #2e2f42;
